--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Pautas y recomendaciones:",
   "main": "App.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,9 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.15.0",
     "pug": "^3.0.3"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.1.1"
   }
 }
