--- a/Version-1.1/package.json
+++ b/Version-1.1/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/agustinabartolome/LosVoracesApp#readme",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.15.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
     "supertest": "^7.1.1"
   }
 }
