--- a/Version-1.1/package.json
+++ b/Version-1.1/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/agustinabartolome/LosVoracesApp#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.15.0",
     "pug": "^3.0.3"
