--- a/Version-1.1/package.json
+++ b/Version-1.1/package.json
@@ -4,6 +4,7 @@
   "description": "Pautas y recomendaciones:",
   "main": "App.js",
   "scripts": {
+    "start": "node App.js",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -24,7 +25,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.15.0",
+    "mongoose": "^8.16.1",
     "pug": "^3.0.3"
   },
   "devDependencies": {
